--- a/package.json
+++ b/package.json
@@ -24,14 +24,23 @@
     }
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^9.2.5",
-    "mongoose": "^5.7.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
+    "pdfkit": "^0.10.0",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0"
   },
