--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     }
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
+    "dropbox-v2-api": "^2.4.6",
     "express": "~4.16.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,20 +38,29 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
+    "node-tesseract-ocr": "^0.2.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pdfkit": "^0.10.0",
     "prettier": "^1.18.2",
-    "rimraf": "^3.0.0"
+    "progress": "^2.0.3",
+    "rimraf": "^3.0.0",
+    "tesseract.js": "^2.0.0-beta.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.2",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^6.4.0",
     "husky": "^3.0.5",
     "nodemon": "^1.19.2",
