--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "dropbox-v2-api": "^2.4.6",
     "express": "~4.16.1",
-    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^9.2.5",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
     "node-tesseract-ocr": "^0.2.0",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
