--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon -w src --exec babel-node ./src/bin/www",
+    "start": "node dist/app.js",
+    "prestart": "npm run -s build",
     "dev": "nodemon -w src --exec babel-node ./src/bin/www",
-    "build": "rimraf ./dist && babel src -d ./dist",
+    "build": "rimraf ./dist && babel src -s -d ./dist",
     "test": "jest",
     "lint": "eslint 'src/**/*.js' --fix",
     "format": "prettier-eslint 'server/**/*.{js,json}' --write"
@@ -23,21 +24,23 @@
     }
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0",
     "@babel/polyfill": "^7.6.0",
+    "@babel/register": "^7.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
+    "debug": "2.6.9",
+    "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.6",
-    "express": "~4.16.1",
+    "express": "4.16.1",
     "jsonwebtoken": "^8.5.1",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.4.2",
     "lodash": "^4.17.15",
-    "mongoose": "^5.7.3",
+    "mongoose": "^5.7.5",
     "morgan": "~1.9.1",
-    "node-tesseract-ocr": "^0.2.0",
+    "node-tesseract-ocr": "0.2.0",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -48,23 +51,36 @@
     "progress": "^2.0.3",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
-    "tesseract.js": "^2.0.0-beta.1"
+    "tesseract.js": "2.0.0-beta.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/node": "^7.6.2",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.0",
-    "babel-core": "^6.26.3",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.6.2",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^6.4.0",
-    "husky": "^3.0.5",
-    "nodemon": "^1.19.2",
+    "eslint": "^6.5.1",
+    "husky": "^3.0.9",
+    "nodemon": "^1.19.4",
     "prettier-eslint-cli": "^5.0.0"
   }
 }
