Fixed npm packages

--- a/config.json
+++ b/config.json
@@ -4,8 +4,7 @@
     "app_name": "photo2letters api",
     "app_desc": "The API for photo2letters mobile app",
     "node_port": 4040,
-    "json_indentation": 4,
-    "database": "mongodb+srv://photoAdmin:AzUDaB3Z@NQSAHr@photo2letters-9ajkn.mongodb.net/test?retryWrites=true&w=majority"
+    "json_indentation": 4
   },
   "testing": {
     "config_id": "testing",
