--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/bin/www.js",
+    "prestart": "npm run -s build",
+    "dev": "nodemon -w src --exec babel-node ./src/bin/www",
     "build": "rimraf ./dist && babel src -s -d ./dist",
     "test": "jest",
     "lint": "eslint 'src/**/*.js' --fix",
@@ -53,7 +55,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.6.4",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
@@ -72,7 +74,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.6.2",
     "babel-loader": "^8.0.6",
